<resources>
    <!-- This is the text display at the top of the screen -->
    <string name="app_name">SuperChat</string>

    <!-- Menu ######################################################################## -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Login Page ################################################################## -->
    <string name="login_page_label">Log in</string>
    <string name="login_email_label">Email Address: </string>
    <string name="login_email_placeholder">name@example.com</string>

    <string name="login_password_label">Password: </string>
    <string name="login_password_placeholder">Password</string>

    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_signup_link"><u>Sign up</u></string>

    <string name="login_button">Log in</string>
    <string name="title_activity_signup">signup</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Signup Page ################################################################ -->
    <string name="signup_page_label">Sign up</string>
    <string name="signup_nickname_label">Nickname: </string>
    <string name="signup_nickname_placeholder">First Last</string>

    <string name="signup_email_label">Email Address: </string>
    <string name="signup_email_placeholder">name@example.com</string>

    <string name="signup_password_label">Password: </string>
    <string name="signup_password_placeholder">Password</string>

    <string name="signup_passwordConfirm_label">Confirm Password: </string>
    <string name="signup_passwordConfirm_placeholder">Password</string>

    <string name="signup_has_account">Already have an account?</string>
    <string name="signup_login_link"><u>Log in</u></string>

    <string name="signup_invalid">Invalid credentials. Please try again.</string>
    <string name="signup_button">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_channel">Create Channel</string>
    <string name="logout">Logout</string>
    <string name="view_members">View Members</string>
    <string name="add_someone">Add Someone</string>
    <string name="leave">Leave</string>
    <string name="invite">Invite</string>
    <!--    <string name="signup_activity_signup">signup</string>-->
</resources>